style.css
/* Variables */
:root {
  --primary-color: linear-gradient(45deg, #e5760f 0%, #ff00e5 100%);
  --dark: #040818;
  --grey: #989aa3;
  --light-grey: #cdced4;
  --padding: 104px;
}

/* Fonts */

@font-face {
  font-family: "Big Caslon FB";
  src: url("fonts/BigCaslonFB-BlackItalic.woff2") format("woff2"),
    url("fonts/BigCaslonFB-BlackItalic.woff") format("woff");
  font-weight: 900;
  font-style: italic;
}

/* Reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}

ul {
  padding: 0;
}

button {
  background: none;
  border: none;
  padding: 0;
}

/* Styles */

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
  margin: 0;
  background-color: black;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: var(--dark);
}

h1 {
  font-weight: 600;
  font-size: 6rem;
  margin: 0;
}

p {
  color: var(--dark);
  font-size: 1.5rem;
}

#cursor {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: var(--primary-color);
  position: fixed;
  transition: 0.1s;
  z-index: 100;
}

#cursor::after {
  content: "";
  position: absolute;
  inset: -2px;
  background: var(--primary-color);
  filter: blur(2px);
  z-index: 100;
  border-radius: 50%;
}

body.hidden {
  overflow: hidden;
}

header {
  position: fixed;
  width: 100vw;

  top: 0;
  z-index: 1;
  transition: transform 0.3s, filter 0.3s;
}

.scroll-down header {
  transform: translateY(-100%);
}

.scroll-up header {
  filter: drop-shadow(0 0 20px rgba(4, 8, 24, 0.1));
}

header .wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 var(--padding);
  height: 88px;
}

header.active {
  z-index: 1;
}

header img {
  width: 32px;
  height: 32px;
}

header .white-logo {
  display: none;
}

header {
  background-color: white;
}

nav ul {
  display: flex;
  gap: 48px;
}

nav li {
  list-style: none;
}

nav a {
  font-weight: 400;
  font-size: 1.125rem;
  position: relative;
  white-space: nowrap;
}

nav a::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: -4px;
  left: 0;
  background: var(--dark);
  transform-origin: bottom right;
  transition: transform 0.3s ease-in;
}

nav a:hover::after {
  transition: transform 0.3s ease-out;
  transform: scaleX(1);
  transform-origin: bottom left;
}

.gradient-link::after {
  background: var(--primary-color);
}

header.dark-header {
  background-color: black;
}

header.dark-header .white-logo {
  display: block;
}

header.dark-header .black-logo {
  display: none;
}

header.dark-header nav a {
  color: white;
}
header.dark-header nav a:not(.gradient-link)::after {
  background: white;
}

.gradient-link:hover {
  transition: all 0.2s ease;
  background-image: var(--primary-color);
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

header button {
  width: 48px;
  height: 48px;
  transform: translateX(8px);
  cursor: pointer;
  display: none;
  justify-content: center;
  align-items: center;
}

nav.active {
  display: flex;
  background-color: white;
}

.burger-icon {
  display: inline-block;
  width: 32px;
  height: 32px;
  cursor: pointer;
}
.burger-icon {
  position: relative;
  display: inline-block;
  width: 32px;
  height: 2px;
  border-radius: 2px;
  background: var(--dark);
  transition: all 0.2s ease-out;
}
.burger-icon::before,
.burger-icon::after {
  content: "";
  width: 32px;
  height: 2px;
  background: var(--dark);
  position: absolute;
  border-radius: 2px;
  left: 0;
  transition: all 0.2s ease-out;
}
.burger-icon::before {
  top: -10px;
}
.burger-icon::after {
  bottom: -10px;
}

header button:hover .burger-icon::before {
  top: -12px;
}
header button:hover .burger-icon::after {
  bottom: -12px;
}
.burger-icon.active {
  background: transparent !important;
}

.burger-icon.active::before {
  top: 0;
  transform: rotateZ(45deg);
}
.burger-icon.active::after {
  bottom: 0;
  transform: rotateZ(-45deg);
}
header button:hover .burger-icon.active::before {
  top: 0;
  transform: rotateZ(45deg);
}
header button:hover .burger-icon.active::after {
  bottom: 0;
  transform: rotateZ(-45deg);
}

.dark-header .burger-icon,
.dark-header .burger-icon::before,
.dark-header .burger-icon::after {
  background: white;
}

.dark-header nav.active {
  background-color: black;
}

.section-title {
  font-weight: 500;
  color: var(--grey);
  letter-spacing: 3px;
  text-transform: uppercase;
  margin-top: 72px;
  padding: 0 var(--padding);
}

.btn {
  font-weight: 500;
  padding: 12px 24px;
  border: var(--dark) solid 2px;
  height: 48px;
  width: min-content;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border-radius: 100px;
  overflow: hidden;
  position: relative;
  color: var(--dark);
  white-space: nowrap;
}

.btn::before {
  --size: 0;
  content: "";
  position: absolute;
  left: var(--x);
  top: var(--y);
  width: var(--size);
  height: var(--size);
  background: radial-gradient(circle closest-side, #ff00e5, #f47d0e 65%);
  transform: translate(-50%, -50%);
  transition: width 0.2s ease, height 0.2s ease;
  border-radius: 50%;
}

.btn:hover::before {
  --size: 350px;
  z-index: -1;
}

.btn:hover {
  color: white;
}

.landing .btn {
  border: white solid 2px;
  color: white;
}

.landing .btn:first-of-type {
  transition-delay: 0.2s !important;
}

.cv-btn {
  font-weight: 500;
  display: inline-flex;
  align-items: center;
  gap: 16px;
  white-space: nowrap;
  color: white;
  fill: white;
  width: fit-content;
  transition-delay: 0.4s !important;
}

.cv-btn span {
  position: relative;
}

.cv-btn:hover span {
  transition: 0.2s;
  background-image: var(--primary-color);
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}
/* ... */

